--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,6 @@
-spring:
-  datasource:
-    url: jdbc:oracle:thin:@oracle.fiap.com.br:1521:ORCL
-    username: pf1646
-    password: fiap23
-  jpa:
-    hibernate:
-      ddl-auto: update
-      open-in-view: false
-      show-sql: true
-      
 server:
   port: 80
+
+spring:
+  profiles:
+    active: desenvolvimento
